<resources>
    <string name="app_name">웹소소</string>
    <string name="app_name_debug">안드소소</string>
    <string name="base_fragment_null_error">bindingException: binding is null in BindingFragment</string>
    <string name="main_ic_home">홈</string>
    <string name="main_ic_explore">탐색</string>
    <string name="main_ic_library">서재</string>
    <string name="main_ic_feed">피드</string>
    <string name="main_ic_my_page">My</string>
    <string name="main_back_press">뒤로가기를 한번 더 누르면 종료됩니다</string>
    <string name="normal_explore_novel_count_title">작품</string>
    <string name="normal_explore_novel_rating">%.1f (%d)</string>
    <string name="normal_explore_not_exist_result">해당 검색어를 가진 작품은\n아직 등록되지 않았어요...</string>
    <string name="normal_explore_add_novel_inquire">작품 추가 문의하기</string>
    <string name="normal_explore_result_inquire">찾는 작품이 없다면?</string>
    <string name="explore_title">탐색하기</string>
    <string name="explore_normal_search_hint">작품 제목, 작가를 검색하세요</string>
    <string name="explore_detail_search_title">뭐 읽을지 고민될 땐?</string>
    <string name="explore_detail_search_description">장르, 연재상태, 별점, 키워드로 작품 찾기</string>
    <string name="explore_detail_search_button">내 취향에 맞는 웹소설 찾기</string>
    <string name="explore_soso">소소</string>
    <string name="explore_sosopick_description">다른 독자들이 최근에 찾아본 웹소설이에요</string>
    <string name="detail_explore_info">정보</string>
    <string name="detail_explore_keyword">키워드</string>
    <string name="detail_explore_novel_rating">%.1f (%d)</string>
    <string name="detail_explore_reset">초기화</string>
    <string name="detail_explore_search_novel">작품 찾기</string>
    <string name="detail_explore_info_genre">장르</string>
    <string name="detail_explore_info_status">연재상태</string>
    <string name="detail_explore_info_rating">별점</string>
    <string name="detail_explore_info_status_in_series">연재중</string>
    <string name="detail_explore_info_status_complete">완결작</string>
    <string name="detail_explore_info_rating_lowest">%1$.1f이상</string>
    <string name="detail_explore_info_rating_lower">%1$.1f이상</string>
    <string name="detail_explore_info_rating_higher">%1$.1f이상</string>
    <string name="detail_explore_info_rating_highest">%1$.1f이상</string>
    <string name="detail_explore_search_hint">키워드를 검색하세요</string>
    <string name="detail_explore_keyword_search_result">검색결과</string>
    <string name="detail_explore_keyword_not_exist_result">해당 키워드는\n아직 등록되지 않았어요..</string>
    <string name="detail_explore_keyword_inquire_keyword">키워드 문의하러 가기</string>
    <string name="detail_explore_result_filter_description">\u00A0적용</string>
    <string name="detail_explore_result_novel">작품</string>
    <string name="detail_explore_result_not_exist">해당하는 작품이 없어요\n검색의 범위를 더 넓혀보세요</string>
    <string name="detail_explore_result_inquire">찾는 작품이 없다면?</string>
    <string name="novel_detail_review">나도 한마디</string>
    <string name="novel_detail_interest">관심</string>
    <string name="novel_detail_info">정보</string>
    <string name="novel_detail_feed">피드</string>
    <string name="novel_detail_report_error">오류 제보</string>
    <string name="novel_detail_remove_evaluate">평가 삭제</string>
    <string name="novel_detail_remove_evaluate_alert_title">평가를 모두 삭제할까요?</string>
    <string name="novel_detail_remove_evaluate_alert_message">별점, 상태, 날짜, 매력포인트,\n키워드 정보가 사라지고 되돌릴 수 없어요</string>
    <string name="novel_detail_remove_cancel">취소</string>
    <string name="novel_detail_remove_accept">삭제</string>
    <string name="novel_detail_remove_result">평가를 모두 삭제했어요</string>
    <string name="novel_detail_tooltip">읽기 상태를 체크하여\n작품을 평가해보세요!</string>
    <string name="novel_detail_feed_write">작성 완료!</string>
    <string name="novel_info_platforms_title">작품 보러가기</string>
    <string name="novel_info_view_more">…더보기</string>
    <string name="novel_info_view_less">접기</string>
    <string name="novel_info_title">작품 소개</string>
    <string name="novel_info_rating_title">독자들의 평가</string>
    <string name="novel_info_keyword_chip_text">%s %d</string>
    <string name="novel_info_review_none">아직 평가가 없어요\n최초로 남겨보세요!</string>
    <string name="novel_info_read_status_watching">보는 중</string>
    <string name="novel_info_read_status_watched">봤어요</string>
    <string name="novel_info_read_status_quit">하차</string>
    <string name="novel_info_read_status_watching_count">%d명이 작품을\n같이 보고 있어요</string>
    <string name="novel_info_read_status_watched_count">%d명이 작품을\n같이 봤어요</string>
    <string name="novel_info_read_status_quit_count">%d명이 작품을\n하차했어요</string>
    <string name="novel_info_user_unit">명</string>
    <string name="novel_info_charm_points_body">%s(이)가 매력적인 작품이에요</string>
    <string name="novel_feed_none">아직 글이 없어요\n최초로 남겨보세요!</string>
    <string name="feed_score_count">%.1f (%d)</string>
    <string name="feed_popup_menu_content_report_isNotMyFeed">스포일러 신고, 부적절한 표현 신고</string>
    <string name="feed_popup_menu_content_isMyFeed">수정하기, 삭제하기</string>
    <string name="feed_title">소소피드</string>
    <string name="feed_spoiler_warning">스포일러가 포함된 글 보기</string>
    <string name="feed_category_male">전체,판타지,현판,무협,드라마,미스터리,라노벨,로맨스,로판,BL,기타</string>
    <string name="feed_category_female">전체,로맨스,로판,BL,판타지,현판,무협,드라마,미스터리,라노벨,기타</string>
    <string name="feed_is_modified">(수정됨)</string>
    <string name="feed_none">아직 글이 없어요\n최초로 남겨보세요!</string>
    <string name="feed_server_error">알 수 없는 문제가 발생했어요!</string>
    <string name="feed_create_done">작성 완료!</string>
    <string name="feed_removed_feed_snackbar">해당 글을 찾을 수 없어요</string>
    <string name="feed_no_more_title">게시글이 없어요</string>
    <string name="feed_no_more_content">새 글을 남겨보세요!</string>
    <string name="feed_detail_title">게시글</string>
    <string name="feed_detail_comment_title">댓글</string>
    <string name="feed_detail_comment_dot">·</string>
    <string name="feed_detail_input">댓글을 남겨보세요</string>
    <string name="removed_feed_menu_title">해당 글을 찾을 수 없어요</string>
    <string name="remove_popup_menu_title_comment">내 댓글을 삭제할까요?</string>
    <string name="remove_popup_menu_description_comment">삭제한 댓글은 되돌릴 수 없어요</string>
    <string name="report_popup_menu_impertinence_comment">해당 댓글에 부적절한 표현이\n사용되었나요?</string>
    <string name="report_popup_menu_spoiling_comment">해당 댓글이 스포일러를\n포함하고 있나요?</string>
    <string name="report_popup_menu_description_comment">해당 댓글이 커뮤니티 가이드\n위반했는지 검토할게요.</string>
    <string name="report_popup_menu_cancel">취소</string>
    <string name="report_popup_menu_report">신고</string>
    <string name="remove_popup_menu_title">해당 글을 삭제할까요?</string>
    <string name="remove_popup_menu_description">삭제한 글은 되돌릴 수 없어요</string>
    <string name="remove_popup_menu_remove">삭제</string>
    <string name="report_popup_menu_title">신고가 접수되었어요!</string>
    <string name="report_popup_menu_description">해당 글이 커뮤니티 가이드\n위반했는지 검토할게요.</string>
    <string name="report_popup_menu_check">확인</string>
    <string name="report_popup_menu_impertinence_feed">해당 글에 부적절한 표현이\n사용되었나요?</string>
    <string name="report_popup_menu_spoiling_feed">해당 글이 스포일러를 포함하고 있나요?</string>
    <string name="login_browse_without_signup">회원가입 없이 둘러보기</string>
    <string name="novel_rating_enroll">완료</string>
    <string name="novel_rating_add_date">본 날짜 추가</string>
    <string name="novel_rating_display_date">%d년 %d월 %d일</string>
    <string name="novel_rating_display_date_with_tilde">%d년 %d월 %d일 ~ %d년 %d월 %d일</string>
    <string name="novel_rating_read_status_watching">보는 중</string>
    <string name="novel_rating_read_status_watched">봤어요</string>
    <string name="novel_rating_read_status_quit">하차</string>
    <string name="novel_rating_charm_points">세계관,분위기,소재,캐릭터,관계</string>
    <string name="novel_rating_cancel_alert_title">평가를 그만하시겠어요?</string>
    <string name="novel_rating_cancel_alert_accept">그만하기</string>
    <string name="novel_rating_cancel_alert_cancel">계속 작성</string>
    <string name="novel_rating_complete">평가 완료!</string>
    <string name="novel_rating_save_error">다시 시도해주세요</string>
    <string name="novel_rating_keyword_none">해당 키워드는\n아직 등록되지 않았어요..</string>
    <string name="novel_rating_keyword_report">키워드 문의하러 가기</string>
    <string name="novel_rating_date_start_date">시작 날짜</string>
    <string name="novel_rating_date_end_date">종료 날짜</string>
    <string name="novel_rating_date_complete">완료</string>
    <string name="novel_rating_date_remove">본 날짜 없애기</string>
    <string name="novel_rating_current_date">%04d-%02d-%02d</string>
    <string name="novel_rating_date_remove_alert_title">날짜 정보를 삭제할까요?</string>
    <string name="novel_rating_date_remove_alert_accept">삭제</string>
    <string name="novel_rating_date_remove_alert_cancel">취소</string>
    <string name="novel_rating_keyword_title">키워드 선택</string>
    <string name="novel_rating_keyword_search_hint">키워드를 검색하세요</string>
    <string name="novel_rating_keyword_clear">초기화</string>
    <string name="novel_rating_keyword_enroll">%d개 선택</string>
    <string name="novel_rating_charm_point_title">매력포인트</string>
    <string name="novel_rating_keyword">키워드</string>
    <string name="novel_rating_keyword_button">이 작품에 대해 소개해주세요!</string>
    <string name="novel_rating_keyword_exceed">최대 20개까지 선택 가능해요</string>
    <string name="novel_rating_charm_point_exceed">최대 3개까지 선택 가능해요</string>
    <string name="onboarding_skip">건너뛰기</string>
    <string name="onboarding_first_input_nickname">닉네임을 입력하세요</string>
    <string name="onboarding_first_duplicate_check">중복확인</string>
    <string name="onboarding_first_next_button">다음으로</string>
    <string name="onboarding_second_select_gender_and_birth_year">성별, 출생연도를 선택하세요</string>
    <string name="onboarding_second_secret_information">해당 정보는 추천에 활용되며, 언제든 변경할 수 있어요</string>
    <string name="onboarding_second_gender">성별</string>
    <string name="onboarding_second_man">남성</string>
    <string name="onboarding_second_woman">여성</string>
    <string name="onboarding_second_birth_year">출생연도</string>
    <string name="onboarding_second_input_birth_year">태어난 해를 입력하세요</string>
    <string name="onboarding_second_next">다음으로</string>
    <string name="onboarding_second_bottom_sheet_birth_year">출생연도</string>
    <string name="onboarding_second_bottom_sheet_complete">완료</string>
    <string name="onboarding_select_general">평소 즐겨보는 장르를 선택하세요</string>
    <string name="onboarding_recommend_general">선호 장르를 기반으로 웹소설을 추천해드려요</string>
    <string name="welcome_welcome_websoso">웹소소와 계약 완료!</string>
    <string name="welcome_hello_user">%s님, 만나서 반가워요!</string>
    <string name="welcome_start">시작하기</string>
    <string name="login_request_go_to_login">로그인 하러가기</string>
    <string name="login_request_dismiss">닫기</string>
    <string name="notification_notification">알림</string>
    <string name="load_load_title">로딩 중</string>
    <string name="load_load_description">잠시만 기다려주세요</string>
    <string name="load_fail_title">네트워크 연결에\n실패했어요</string>
    <string name="load_fail_description">연결 상태를 확인한 후\n다시 시도해 보세요.</string>
    <string name="load_fail_reload">페이지 다시 불러오기</string>
    <string name="my_page_title">마이페이지</string>
    <string name="my_page_library">내 통계</string>
    <string name="my_page_activity">내 활동</string>
    <string name="my_library_storage">서재</string>
    <string name="my_library_preference_analysis">취향 분석</string>
    <string name="my_library_interesting">관심</string>
    <string name="notification_permission_title">앱 알림을 켤까요?</string>
    <string name="notification_permission_description">웹소소 알림을 받으려면,\n기기 설정에서 알림 허용이 필요해요.</string>
    <string name="notification_permission_next_time">다음에 하기</string>
    <string name="notification_permission_to_set_up">설정하러 가기</string>
    <string name="logout_title">로그아웃 할까요?</string>
    <string name="logout_cancel">취소</string>
    <string name="logout_out">로그아웃</string>
    <string name="block_user_title">해당 유저를 차단할까요?</string>
    <string name="block_user_description">상대의 게시글, 댓글,\n프로필을 볼 수 없어요</string>
    <string name="block_user_button">차단</string>
    <string name="tv_remove_popup_menu_stop_creating">글 작성을 그만하시겠어요?</string>
</resources>