<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_novel_detail_white_radius_14dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="20dp">

        <ImageView
            android:id="@+id/iv_notification_permission"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginHorizontal="102dp"
            android:src="@drawable/ic_novel_detail_warning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_notification_permission_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/notification_permission_title"
            android:textAlignment="center"
            android:textAppearance="@style/title1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/iv_notification_permission"
            app:layout_constraintStart_toStartOf="@+id/iv_notification_permission"
            app:layout_constraintTop_toBottomOf="@id/iv_notification_permission" />

        <TextView
            android:id="@+id/tv_notification_permission_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/notification_permission_description"
            android:textAppearance="@style/body2"
            android:textColor="@color/gray_300_52515F"
            app:layout_constraintEnd_toEndOf="@+id/tv_notification_permission_title"
            app:layout_constraintStart_toStartOf="@+id/tv_notification_permission_title"
            app:layout_constraintTop_toBottomOf="@id/tv_notification_permission_title" />

        <TextView
            android:id="@+id/tv_notification_permission_next_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_novel_info_gray_50_radius_8dp"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/notification_permission_next_time"
            android:textAppearance="@style/body4"
            android:textColor="@color/gray_300_52515F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_notification_permission_to_set_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_notification_permission_description" />

        <TextView
            android:id="@+id/tv_notification_permission_to_set_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:background="@drawable/bg_novel_info_primary_100_radius_8dp"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/notification_permission_to_set_up"
            android:textAppearance="@style/body4"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tv_notification_permission_next_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_notification_permission_next_time"
            app:layout_constraintTop_toTopOf="@+id/tv_notification_permission_next_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
