<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_novel_detail_white_radius_14dp"
        android:padding="20dp">

        <ImageView
            android:id="@+id/iv_editing_cancel_feed"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginHorizontal="102dp"
            android:src="@drawable/ic_novel_detail_warning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_editing_cancel_feed_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/tv_remove_popup_menu_stop_creating"
            android:textAlignment="center"
            android:textAppearance="@style/title2"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_editing_cancel_feed" />

        <TextView
            android:id="@+id/tv_editing_cancel_feed_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_novel_info_gray_50_radius_8dp"
            android:gravity="center"
            android:paddingHorizontal="36dp"
            android:paddingVertical="10dp"
            android:text="@string/novel_rating_cancel_alert_accept"
            android:textAlignment="center"
            android:textAppearance="@style/label1"
            android:textColor="@color/gray_300_52515F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_editing_cancel_feed_alert_cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_editing_cancel_feed_title" />

        <TextView
            android:id="@+id/tv_editing_cancel_feed_alert_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_novel_info_primary_100_radius_8dp"
            android:gravity="center"
            android:paddingHorizontal="34dp"
            android:paddingVertical="10dp"
            android:text="@string/novel_rating_cancel_alert_cancel"
            android:textAlignment="center"
            android:textAppearance="@style/label1"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tv_editing_cancel_feed_cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_editing_cancel_feed_cancel_button"
            app:layout_constraintTop_toTopOf="@+id/tv_editing_cancel_feed_cancel_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
